[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
regex = "1.11.1"


[[bin]]
name = "day01"
path = "src/day01/bin/main.rs"

[[bin]]
name = "day02"
path = "src/day02/bin/main.rs"

[[bin]]
name = "day03"
path = "src/day03/bin/main.rs"

[[bin]]
name = "day04"
path = "src/day04/bin/main.rs"

[[bin]]
name = "day05"
path = "src/day05/bin/main.rs"

[[bin]]
name = "day06"
path = "src/day06/bin/main.rs"

[[bin]]
name = "day07"
path = "src/day07/bin/main.rs"

[[bin]]
name = "day08"
path = "src/day08/bin/main.rs"

[[bin]]
name = "day09"
path = "src/day09/bin/main.rs"

[[bin]]
name = "day10"
path = "src/day10/bin/main.rs"

[[bin]]
name = "day11"
path = "src/day11/bin/main.rs"

[[bin]]
name = "day12"
path = "src/day12/bin/main.rs"